tests/neg/ghost-val-rhs.scala
object Test {
  def f(ghost i: Int) = {
    val j: Int = i // error
    ()
  }
}
